# vendimint

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile  justfile.fedimint.just
.github/workflows/: ci.yml
fedimint-cli/: Cargo.toml
fedimint-cli/src/: main.rs
fedimintd/: Cargo.toml
machine/: Cargo.toml
machine/src/: lib.rs
manager/: Cargo.toml
manager/src/: lib.rs
scripts/tests/: protocol-tests.sh
shared/: Cargo.toml
shared/src/: lib.rs
src/: lib.rs  machine.rs  manager.rs  shared.rs
tests/: Cargo.toml
tests/src/: lib.rs
vendimint/: Cargo.toml
vendimint-tests/: Cargo.toml
vendimint/src/: claim.rs  fedimint_wallet.rs  lib.rs  machine.rs  manager.rs
vendimint/src/vendimint_iroh/: machine.rs  manager.rs  mod.rs  shared.rs
