[workspace]
members = ["fedimintd", "fedimint-cli", "vendimint", "vendimint-tests"]
resolver = "3"

[workspace.package]
authors = ["tvolk131"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/lightningvend/vendimint"
version = "0.0.9"

[workspace.lints.clippy]
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
large_futures = "allow"
missing_errors_doc = "allow"
option_if_let_else = "allow"
significant_drop_tightening = "allow"

[workspace.dependencies]
anyhow = "1.0.99"
bincode = { version = "2.0.1", features = ["serde"] }
bip39 = "2.2.0"
bitcoin = "0.32.7"
devimint = "0.8.1"
fedimintd = "0.8.1"
fedimint-api-client = { version = "0.8.1", features = ["tor"] }
fedimint-bip39 = "0.8.1"
fedimint-build = "0.8.1"
fedimint-cli = "0.8.1"
fedimint-client = "0.8.1"
fedimint-core = "0.8.1"
fedimint-derive-secret = "0.8.1"
fedimint-lnv2-common = "0.8.1"
fedimint-lnv2-remote-client = "0.0.5"
fedimint-mint-client = "0.8.1"
fedimint-rocksdb = "0.8.1"
fedimint-tpe = "0.8.1"
futures-util = "0.3.31"
iroh = { version = "0.34.1", features = ["discovery-local-network"] }
iroh-blobs = "0.34.1"
iroh-docs = { version = "0.34.0", features = ["rpc"] }
iroh-gossip = "0.34.1"
lightning-invoice = "0.33.2"
n0-future = "0.1.3"
quic-rpc = "0.19.0"
rand = "0.8.5"
serde = "1.0.228"
serde_json = "1.0.145"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros", "rt"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
vendimint = { path = "./vendimint" }

# TODO: Figure out what this does and if it's needed.
# It's a copy/paste from roastr.
[profile.dev]
split-debuginfo = "packed"

# In dev mode, optimize perf-critical crates (mainly cryptography crates).
# This prevents fedimint from being really slow.
[profile.dev.package]
bitcoin_hashes = { opt-level = 3 }
bls12_381 = { opt-level = 3 }
byteorder = { opt-level = 3 }
ff = { opt-level = 3 }
group = { opt-level = 3 }
pairing = { opt-level = 3 }
rand_core = { opt-level = 3 }
ring = { opt-level = 3 }
secp256k1 = { opt-level = 3 }
secp256k1-sys = { opt-level = 3 }
subtle = { opt-level = 3 }
tikv-jemalloc-sys = { opt-level = 3 }
zeroize = { opt-level = 3 }

# TODO: Figure out what this does and if it's needed.
# It's a copy/paste from roastr.
[profile.ci]
inherits = "dev"
debug = "line-tables-only"
incremental = false

# TODO: Figure out what this does and if it's needed.
# It's a copy/paste from roastr.
[profile.release]
debug = "line-tables-only"
