[workspace]
members = ["fedimintd", "fedimint-cli", "vendimint", "vendimint-tests"]
resolver = "3"

[workspace.package]
authors = ["tvolk131"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/lightningvend/vendimint"
version = "0.0.9"

[workspace.lints.clippy]
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
large_futures = "allow"
missing_errors_doc = "allow"
option_if_let_else = "allow"
significant_drop_tightening = "allow"

[workspace.dependencies]
anyhow = "1.0.99"
bincode = { version = "2.0.1", features = ["serde"] }
bip39 = "2.2.2"
bitcoin = "0.32.8"
devimint = "0.10.0"
fedimintd = "0.10.0"
fedimint-api-client = { version = "0.10.0", features = ["tor"] }
fedimint-bip39 = "0.10.0"
fedimint-build = "0.10.0"
fedimint-cli = "0.10.0"
fedimint-client = "0.10.0"
fedimint-connectors = "0.10.0"
fedimint-core = "0.10.0"
fedimint-derive-secret = "0.10.0"
fedimint-lnv2-common = "0.10.0"
fedimint-lnv2-remote-client = { git = "https://github.com/tvolk131/fedimint-lnv2-remote-client", rev = "b564b71a834ccf6875f804e02dd0cb65f62c5898" }
fedimint-mint-client = "0.10.0"
fedimint-rocksdb = "0.10.0"
fedimint-tpe = "0.11.0"
futures-util = "0.3.31"
iroh = "0.97.0"
iroh-blobs = "0.99.0"
iroh-docs = "0.97.0"
iroh-gossip = "0.97.0"
lightning-invoice = "0.33.2"
n0-future = "0.3.2"
quic-rpc = "0.20.0"
rand = "0.8.5"
serde = "1.0.228"
serde_json = "1.0.149"
tempfile = "3.27.0"
tokio = { version = "1.49.0", features = ["macros", "rt"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
vendimint = { path = "./vendimint" }

# TODO: Figure out what this does and if it's needed.
# It's a copy/paste from roastr.
[profile.dev]
split-debuginfo = "packed"

# In dev mode, optimize perf-critical crates (mainly cryptography crates).
# This prevents fedimint from being really slow.
[profile.dev.package]
bitcoin_hashes = { opt-level = 3 }
bls12_381 = { opt-level = 3 }
byteorder = { opt-level = 3 }
ff = { opt-level = 3 }
group = { opt-level = 3 }
pairing = { opt-level = 3 }
rand_core = { opt-level = 3 }
ring = { opt-level = 3 }
secp256k1 = { opt-level = 3 }
secp256k1-sys = { opt-level = 3 }
subtle = { opt-level = 3 }
tikv-jemalloc-sys = { opt-level = 3 }
zeroize = { opt-level = 3 }

# TODO: Figure out what this does and if it's needed.
# It's a copy/paste from roastr.
[profile.ci]
inherits = "dev"
debug = "line-tables-only"
incremental = false

# TODO: Figure out what this does and if it's needed.
# It's a copy/paste from roastr.
[profile.release]
debug = "line-tables-only"
