[package]
name = "roastr-cli"
version = "0.0.2"
authors = ["tvolk131"]
edition = "2024"
description = "fedimint-cli with custom module set"

[[bin]]
name = "fedimint-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
fedimint-cli = "0.7.2"
fedimint-core = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
fedimint-build = { git = "https://github.com/fedimint/fedimint" }
