[package]
name = "fedimintd"
publish = false
authors = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "fedimintd"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
fedimintd = { workspace = true }
fedimint-core = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
fedimint-build = { git = "https://github.com/fedimint/fedimint" }
