[package]
name = "machine"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
fedimint-core = { workspace = true }
fedimint-lnv2-common = { workspace = true }
iroh-docs = { workspace = true }
quic-rpc = { workspace = true }
shared = { workspace = true }
serde_json = { workspace = true }
iroh = { workspace = true }
n0-future = "0.1.3"
tokio = { workspace = true }
iroh-blobs = { workspace = true }
iroh-gossip = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }