[package]
name = "manager"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
fedimint-core = { workspace = true }
iroh = { workspace = true }
iroh-blobs = { workspace = true }
iroh-docs = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
fedimint-lnv2-common = { workspace = true }
bincode = { workspace = true }
futures-lite = "2"

