[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
anyhow = { workspace = true }
fedimint-core = { workspace = true }
fedimint-lnv2-common = { workspace = true }
fedimint-tpe = { workspace = true }
iroh-docs = { workspace = true }
machine = { workspace = true }
manager = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
